tests/paczka1/fuzzy1/63324278.err
Error in line 7: 2CpepT1M S592 61,1
Error in line 1: IVkZfT S592 89,8
Error in line 8: Z0Ehk6tn S32 65,2
Error in line 13: iYeKQ S263 7,3
Error in line 24: NlrlxZJV7R S592 91,4
Error in line 23: iYeKQ A436 357,5
Error in line 20: IVkZfT S32 219,0
